base BindingRecyclerView implementation

--- a/bindingrecycler/src/main/res/layout/sample_rec_item.xml
+++ b/bindingrecycler/src/main/res/layout/sample_rec_item.xml
@@ -4,6 +4,10 @@
     <data>
 
         <variable
+            name="position"
+            type="Integer" />
+
+        <variable
             name="item"
             type="String" />
 
